package ar.edu.utn.frba.dds.domain.solicitud;

public enum EstadoSolicitudDinamica {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA,
  ACEPTADA_CON_SUGERENCIA
}